# codecserver-softmbe

./: CMakeLists.txt  README.md
debian/: changelog  control  copyright  rules
src/: CMakeLists.txt  blockingqueue.cpp  blockingqueue.hpp  interleaver_permutations_const.hpp  softmbedevice.cpp  softmbedevice.hpp  softmbedriver.cpp  softmbedriver.hpp  softmbesession.cpp  softmbesession.hpp
